# gcode-thumbnail-tool

./: .gitignore  gcode_thumbnail_tool.py  pyproject.toml
tests/files/: cura_5.1.0.gcode  mks_sample.gcode  orca_2.3.0.gcode  prusa_2.9.3.gcode  qidi_sample.gcode  snapmaker_sample.gcode  weedo_sample.gcode
